# HiKResetPasswd

./: .env.example  .gitignore  LICENSE  README.md  build_nuitka.sh  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/workflows/: checks.yml  test.yml
backend/: pyproject.toml
backend/src/backend/: keygen.py  main.py  qr_decoder.py  service.py
backend/tests/: test_api.py  test_keygen.py  test_qr_decoder.py  test_service.py
docs/: README_en.md  README_zh.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: HikResetTool.vue
src/hikresetpasswd/: __main__.py  config.py  keygen.py  main.py  qr_decoder.py  sadp_discovery.py  service.py
tests/: test_api.py  test_config.py  test_keygen.py  test_qr_decoder.py  test_sadp_discovery.py  test_service.py
