[project]
name = "hikresetpasswd"
version = "1.0.0"
description = "海康威视摄像头密码重置工具 / Hikvision Camera Password Reset Tool"
authors = [
    {name = "doubletry"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pillow (>=12.1.1,<13.0.0)",
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hikresetpasswd", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "ruff (>=0.15.6,<0.16.0)"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.ruff]
# 与项目要求一致 / Consistent with project Python version
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter
]
